--- a/src/app/routes/qc/qc-inspection-document-maintenance/qc-inspection-document-maintenance.component.html
+++ b/src/app/routes/qc/qc-inspection-document-maintenance/qc-inspection-document-maintenance.component.html
@@ -63,7 +63,7 @@
               (nzOnCancel)="previewVisible = false"
             >
               <ng-template #modalContent>
-                <img [src]="previewImage" [ngStyle]="{ width: '100%' }" />
+                <img [src]="previewImage" [style]="{ width: '100%' }" />
               </ng-template>
             </nz-modal>
           </div>
