--- a/src/app/routes/report/report-maintenance/report-maintenance.component.html
+++ b/src/app/routes/report/report-maintenance/report-maintenance.component.html
@@ -34,8 +34,8 @@
         </nz-form-label>
         <nz-form-control [nzSpan]="18">
           <nz-select nzAllowClear [(ngModel)]="currentReport.type" style="width: 300px;" [disabled]="standardReport">
-            <nz-option *ngFor="let reportType of reportTypes | keys" nzValue="{{ reportType.key }}"
-              nzLabel="{{ 'REPORT-TYPE-' + reportType.key | i18n }}">
+            <nz-option *ngFor="let reportType of reportTypesKeys" nzValue="{{ reportType }}"
+              nzLabel="{{ 'REPORT-TYPE-' + reportType | i18n }}">
             </nz-option>
           </nz-select>
         </nz-form-control>
