--- a/src/app/routes/report/report-preview/report-preview.component.html
+++ b/src/app/routes/report/report-preview/report-preview.component.html
@@ -39,10 +39,16 @@
  
   </div>
   <div nz-row  >
+    <!--
+
     <pdf-viewer [src]="pdfUrl" 
       [render-text]="true" 
       style="width: 100px; height: 125px"
     
     ></pdf-viewer>
+
+    -->
+    <ngx-extended-pdf-viewer [src]="pdfUrl" ></ngx-extended-pdf-viewer>
+
   </div> 
 </div>
