--- a/src/app/routes/report/report-printer-configuration/report-printer-configuration.component.html
+++ b/src/app/routes/report/report-printer-configuration/report-printer-configuration.component.html
@@ -13,8 +13,8 @@
                     </nz-form-label>
                     <nz-form-control [nzSm]="14" [nzXs]="24">
                         <nz-select nzAllowClear formControlName="type" style="width: 200px;">
-                            <nz-option *ngFor="let reportType of reportTypes | keys" nzValue="{{ reportType.key }}"
-                                nzLabel="{{ 'REPORT-TYPE-' + reportType.key | i18n }}">
+                            <nz-option *ngFor="let reportType of reportTypesKeys" nzValue="{{ reportType }}"
+                                nzLabel="{{ 'REPORT-TYPE-' + reportType | i18n }}">
                             </nz-option>
                         </nz-select>
                     </nz-form-control>
