--- a/src/app/routes/work-order/bill-of-material-maintenance/bill-of-material-maintenance.component.html
+++ b/src/app/routes/work-order/bill-of-material-maintenance/bill-of-material-maintenance.component.html
@@ -45,8 +45,8 @@
 
             <ng-template #bomNumberErrorTpl let-control>
               <div *ngIf="bomNumber!.invalid != null  && (bomNumber!.dirty != null  || bomNumber!.touched != null )">
-                <ng-container *ngIf="bomNumber.errors?.errorCode">
-                  {{ 'ERROR-NEW-BOM-NUMBER-' + bomNumber.errors!.errorCode! | i18n }}</ng-container>
+                <ng-container *ngIf="bomNumber['errors'] && bomNumber['errors']['errorCode']">
+                  {{ 'ERROR-NEW-BOM-NUMBER-' + bomNumber['errors']['errorCode'] | i18n }}</ng-container>
                 <ng-container *ngIf="control.hasError('required')">
                   {{ 'ERROR-NEW-BOM-NUMBER-REQUIRED' | i18n }}</ng-container>
               </div>
